--- a/CSS/vistaperfil.css
+++ b/CSS/vistaperfil.css
@@ -3,33 +3,51 @@ body{
 }
   
 
+header{
+  background-color: #800080;
+  position: relative;
+  height: 120px;
+  margin-left: 21%;
+  border: 1px solid black;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+}
+
+header span {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: space-between;
+}
+
 h1{
-    position: relative;
-    text-align: right;
-    margin-right: 10%;
-    height: 20px;
-    color: #800080;
+  flex: 1;
+  vertical-align: middle;
+}
+
+h2{
+  white-space: nowrap;
+  vertical-align: middle;
 }
 
 .cerrarsesion{
-    display: block;
-    position: relative;
-    margin-left: 73%;
-    width: max-content;
-    color: #000;
+  vertical-align: middle;
+  width: auto;
 }
 
 .imgperfil{
-    border: 1px solid black;
-    display: block;
-    position: absolute;
-    right: 0;
-    top: 0;
-    margin-top: 1%;
-    margin-right: 2%;
-    width: 100px;
-    height: 100px;
+  height: 50px;
+  width: 50px;
+  align-items: end;
+  padding: 10px;
 }
+
+.imgperfil img {
+  border: #000 2px solid;
+}
+
 
 label{
     display: inline-block;
