--- a/CSS/vistaperfil.css
+++ b/CSS/vistaperfil.css
@@ -1,5 +1,7 @@
 body{
   background-color: black;
+  width: 100%;
+  overflow-x: hidden;
 }
   
 
@@ -30,6 +32,12 @@ h1{
 h2{
   white-space: nowrap;
   vertical-align: middle;
+}
+
+iframe{
+  position: absolute;
+  bottom: 0px;
+  width: 100%;
 }
 
 .cerrarsesion{
