--- a/CSS/planespremium.css
+++ b/CSS/planespremium.css
@@ -1,6 +1,17 @@
+body{
+  height: 100%;
+}
+/* iframe{
+  position: relative;
+  height:auto;
+  width: 100%;
+  margin: 20% 1% 1% 1%;
+} */
 iframe{
-    position: absolute;
-    bottom: 0px;
+  display:flex;
+  flex-direction:column;
+  justify-content: flex-end;
+  margin-top: 25%;
 }
 h1{
     position: relative;
@@ -39,8 +50,11 @@ h3{
 }
 
 .planes{
-    margin-top: 5%;
-    margin-left: 20%;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 0% 20% 0% 20%;
+    height: 100%;
     width: 80%;
 }
 .formulario{
@@ -49,7 +63,7 @@ h3{
 }
 
 .formulario, img{
-    width: 70%;
+    width: 100%;
 }
 
 input{
@@ -57,8 +71,9 @@ input{
 }
 
 .botones{
-    margin-top: 2%;
-    margin-left: 7%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
 
 
@@ -119,6 +134,9 @@ input{
 
     iframe{
        position: relative;
+       margin:10% 0% 1% 0%;
+       width:100%;
+       height:auto;
     }
   }
   
