--- a/CSS/vistaperfil.css
+++ b/CSS/vistaperfil.css
@@ -1,235 +1,194 @@
-body{
-  background-color: black;
-  width: 100%;
-  overflow-x: hidden;
-}
-  
 
+html{
+height: auto;
+}
+body{
+    background-color: black;
+    color: purple;
+    height: auto;
+    margin: 0px;
+    }
+header {
+    grid-area: a;
+}
+main{
+    background-color: black;
+    display: flex;
+    flex-direction: column;
+    justify-content: stretch;
+    padding: 5%;
+    height: 100%;
+}
+article{
+    padding: 1%;
+}
+footer{
+    margin-top: 5%;
+}
+iframe {
+    display: flex;
+    flex-direction: column;
+    justify-content: stretch;
+}
+
+/* Header */
 header{
-  background-color: #800080;
-  position: relative;
-  height: 120px;
-  margin-left: 21%;
-  border: 1px solid black;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: space-between;
+    position: relative;
+    width: 100%;
+    border: 1px solid black;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
 }
 
 header span {
-  display: flex;
-  flex-direction: column;
-  align-items: start;
-  justify-content: space-between;
+    display: flex;
+    flex-direction: column;
+    align-items: start;
+    justify-content: space-between;
 }
 
 h1{
-  flex: 1;
-  vertical-align: middle;
+    flex: 1;
+    vertical-align: middle;
 }
 
 h2{
-  white-space: nowrap;
-  vertical-align: middle;
+    white-space: nowrap;
+    vertical-align: middle;
+}
+button{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    background-color: purple;
+    color: white;
+    height: auto;
+    width: auto;
+    border:none;
+    border-radius:2em 2em 2em 2em;
+    text-align: center;
+    align-items: center;
+    text-decoration: none;
+    padding: 1em 1em 1em 1em;
 }
 
-iframe{
-  position: absolute;
-  bottom: 0px;
-  width: 100%;
+button:hover{
+    background-color: white;
+    color: purple;
+}
+.botones{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    text-align: center;
+    align-items: center;
+    margin:1em;
 }
 
 .cerrarsesion{
-  vertical-align: middle;
-  width: auto;
+    vertical-align: middle;
+    width: auto;
 }
 
 .imgperfil{
-  height: 50px;
-  width: 50px;
-  align-items: end;
-  padding: 10px;
+    height: 50px;
+    width: 50px;
+    align-items: end;
+    padding: 10px;
 }
 
 .imgperfil img {
-  border: #000 2px solid;
+    border: #000 2px solid;
 }
 
+/* Cuerpo Principal */
 
-label{
-    display: inline-block;
-    width: 200px;
-    margin-bottom: 20px;
-    margin-top: 20px;
-    color: #800080;
+.cuerpo-principal {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+} 
+/* Fin Cuerpo Principal */
+
+
+
+/* Estilos para los botones */
+/* input[type="button"] {
+    background-color: purple; 
+    color: black; 
+    } */
+    
+    /* Estilos para los enlaces */
+a {
+color: purple;
+display: block;
+}
+a:hover{
+    color: white;
 }
 
-.fechanacimiento{
-    margin-top: 50px ;
-}
-
-input{
-    height: 30px;
-    border: 1px solid #800080;
-}
-
-.inputfecha{
-    height: 20px;
-    width: 170px;
-    border: 1px solid #800080;
-}
-
-.linkpremium{
-    margin-top: 30px;
-    margin-bottom: 20px;
-    color: #800080;
-}
-
-.linkeliminarusuario{
-    display: block;
-    margin-bottom: 20px;
-    color: #800080;
-}
-
-.botones{
+/* Estilos para pantallas más pequeñas (tabletas) */
+@media (max-width: 768px) {
+.body {
     display: grid;
-    grid-template-columns: 200px 200px;
-    grid-template-rows: 50px;
-    gap: 50px;
+    grid-template-areas: "a"
+                        "b"
+                        "c"
+                        "d";
+}
+
+.buscadorinput{
+    width: 70%;
+}
+
+ul {
+    display: flex;
+    flex-direction: row;
+}
+
+li {
+    width: 23%;
+}
+
+.albumes {
+    grid-template-columns: repeat(2, 1fr); 
+    grid-template-rows: repeat(3, 1fr); 
+}
+
+}
+
+/* Estilos para pantallas aún más pequeñas (smartphones) */
+@media screen and (max-width: 480px) {
+
+header {
+    display: flex;
+    flex-direction: column;
+}
+
+header h1 {
+    width: 100%;
     text-align: center;
-    margin-left: 500px;
 }
 
-.botones a button {
-    width: 100%; 
-    height: 100%; 
-    padding: 20px; 
-    background-color: #800080; /* Fondo púrpura */
-    color: #000; /* Texto negro */
-    border: 2px solid #000; /* Borde de 2px en negro */
-    cursor: pointer; /* Cambiar cursor al pasar el mouse */
+header span {
+    align-items: center;
 }
 
-/* Estilos para tablet (ancho máximo de 768px) */
-@media screen and (max-width: 768px) {
-    h1 {
-      text-align: center; /* Centrar el nombre de usuario */
-      margin-right: 0; /* Eliminar el margen derecho */
-      margin-top: 20px; /* Agregar espacio superior */
-    }
-  
-    .cerrarsesion {
-      margin-left: 10px; /* Ajustar la posición de "Cerrar sesión" */
-      margin-right: 10px; /* Ajustar el margen derecho */
-      width: 100%; /* Ocupar todo el ancho disponible */
-    }
-  
-    .imgperfil {
-      width: 50px; /* Redimensionar la imagen de perfil */
-      height: 50px; /* Redimensionar la imagen de perfil */
-      top: 10px; /* Ajustar la posición superior */
-      right: 10px; /* Ajustar la posición derecha */
-    }
-  
-    label {
-      width: 100%; /* Ocupar todo el ancho disponible */
-      margin-bottom: 10px; /* Reducir el espacio entre etiquetas */
-    }
-  
-    .fechanacimiento {
-      margin-top: 10px; /* Ajustar la posición de la fecha de nacimiento */
-    }
-  
-    input {
-      height: 30px; /* Ajustar la altura de los campos de entrada */
-      width: 100%;
-    }
-  
-    .inputfecha {
-      height: 30px; /* Ajustar la altura del campo de fecha */
-      width: 100%; /* Ocupar todo el ancho disponible */
-    }
-  
-    .linkpremium,
-    .linkeliminarusuario {
-      margin-top: 10px; /* Ajustar el espacio entre enlaces */
-    }
-  
-    .botones {
-      display: flex; /* Cambiar a un diseño flexible */
-      flex-direction: column; /* Cambiar la dirección de las columnas */
-      text-align: center;
-      margin-left: 0; /* Eliminar el margen izquierdo */
-    }
-  
-    .botones a button {
-      width: 100%; /* Ocupar todo el ancho disponible */
-      margin-bottom: 10px; /* Espacio entre botones */
-    }
+.albumes {
+    grid-template-columns: repeat(1, 1fr); 
+    grid-template-rows: repeat(6, 1fr); 
+}
 
-    footer{
-        display: none;
-    }
-  }
-  
-  /* Estilos para smartphone (ancho máximo de 480px) */
-  @media screen and (max-width: 480px) {
-    h1 {
-      margin-top: 10px; /* Ajustar espacio superior en teléfono */
-    }
-  
-    .cerrarsesion {
-      margin-left: 10px; /* Ajustar la posición de "Cerrar sesión" */
-      margin-right: 10px; /* Ajustar el margen derecho */
-      width: 100%; /* Ocupar todo el ancho disponible */
-    }
-  
-    .imgperfil {
-      width: 30px; /* Redimensionar la imagen de perfil */
-      height: 30px; /* Redimensionar la imagen de perfil */
-      top: 10px; /* Ajustar la posición superior */
-      right: 10px; /* Ajustar la posición derecha */
-    }
-  
-    label {
-      width: 100%; /* Ocupar todo el ancho disponible */
-      margin-bottom: 5px; /* Reducir el espacio entre etiquetas */
-    }
-  
-    .fechanacimiento {
-      margin-top: 10px; /* Ajustar la posición de la fecha de nacimiento */
-    }
-  
-    input {
-      height: 20px; /* Ajustar la altura de los campos de entrada */
-      width: 100%;
-    }
-  
-    .inputfecha {
-      height: 20px; /* Ajustar la altura del campo de fecha */
-      width: 100%; /* Ocupar todo el ancho disponible */
-    }
-  
-    .linkpremium,
-    .linkeliminarusuario {
-      margin-top: 10px; /* Ajustar el espacio entre enlaces */
-    }
-  
-    .botones {
-      display: flex; /* Cambiar a un diseño flexible */
-      flex-direction: column; /* Cambiar la dirección de las columnas */
-      text-align: center;
-      margin-left: 0; /* Eliminar el margen izquierdo */
-    }
-  
-    .botones a button {
-      width: 100%; /* Ocupar todo el ancho disponible */
-      margin-bottom: 10px; /* Espacio entre botones */
-    }
+}
 
-    footer{
-        display: none;
-    }
-  }
-  
+/* Estilos generales que aplican a todas las resoluciones */
+/* Agrega aquí tus estilos generales que aplican en todas las resoluciones */
+
+
+
+/* Resto de estilos específicos para esta vista */
+/* Agrega aquí los estilos específicos para esta vista */
